src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Remove arrows from number inputs */
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

/* Typography */
.header {
  font-family: 'Inter';
  font-weight: 900;
  font-size: 64px;
  color: #FFFFFF;
}

.sub {
  font-family: 'Inter';
  font-weight: 900;
  font-size: 24px;
  color: #FFFFFF;
}

.body {
  font-family: 'Inter';
  font-weight: 500;
  font-size: 12px;
  color: #FFFFFF;
}

.label {
  font-family: 'Inter';
  font-weight: 400;
  font-size: 12px;
  color: #FFFFFF;
}

.tiny {
  font-family: 'Inter';
  font-weight: 400;
  font-size: 8px;
  color: #FFFFFF;
}

